Fix display issue on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3152,14 +3152,15 @@
 			}
 
 		}
-
+		.w33 {
+			width: 33.33333333333333333333333333332%
+		}
 		@media screen and (max-width: 736px) {
 
 			#footer {
 				padding: 3em 0;
 			}
-
-		}
-		.w33 {
-			width: 33.33333333333333333333333333332%
+			.w33 {
+				width: 100%
+			}
 		}
